// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`at-root.css 1`] = `
.parent {
    @at-root {
        .child1 {
            width: 100px;
        }
        .child2 {
            width: 200px;
        }
    }
}
.parent {
@at-root {
.child1 {
width: 100px;
}
.child2 {
width: 200px;
}
}
}
.parent {
    @at-root  {
        .child1 {
            width: 100px;
        }
        .child2 {
            width: 200px;
        }
    }
}
.parent  {
    @at-root  {
        .child1  {
            width: 100px;
        }
        .child2  {
            width: 200px;
        }
    }
}
.parent
{
@at-root
{
.child1
{
width
:
100px
;
}
.child2
{
width
:
200px
;
}
}
}
.parent

{

@at-root

{

.child1

{

width

:

100px

;

}
.child2

{

width

:

200px

;

}

}

}
.parent {
    @at-root .child {
        width: 100px;
    }
}
.parent {
@at-root .child {
width: 100px;
}
}
.parent{
    @at-root .child{
        width: 100px;
    }
}
.parent  {
    @at-root  .child  {
        width: 100px;
    }
}
.parent
{
@at-root
.child
{
width
:
100px
;
}
}
.parent

{

@at-root

.child

{

width

:

100px

;

}

}
.parent {
@at-root
input[
type
=
'radio'
]
{
color
:
red
;
}
}
@media print {
    .page {
        width: 8in;

        @at-root (with: media) {
            color: red;
        }
    }
}
@media print {
.page {
width: 8in;

@at-root (with: media) {
color: red;
}
}
}
@media print{
    .page{
        width: 8in;

        @at-root (with:media){
            color: red;
        }
    }
}
@media print {
    .page {
        width: 8in;

        @at-root ( with : media ) {
            color: red;
        }
    }
}
@media print  {
    .page  {
        width: 8in;

        @at-root  (  with  :  media  ) {
            color: red;
        }
    }
}
@media print  {
    .page  {
        width: 8in;

    @at-root
        (with: media) {
            color: red;
        }
    }
}
@media print
{
.page
{
width
:
8in
;
@at-root
(
with
:
media
)
{
color
:
red
;
}
}
}
@media print

{

.page

{

width

:

8in

;

@at-root

(

with

:

media

)

{

color
:

red

;

}

}

}
@media print {
    .page {
        width: 8in;

        @at-root (without: media) {
            color: red;
        }
    }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
.parent {
  @at-root {
    .child1 {
      width: 100px;
    }
    .child2 {
      width: 200px;
    }
  }
}
.parent {
  @at-root {
    .child1 {
      width: 100px;
    }
    .child2 {
      width: 200px;
    }
  }
}
.parent {
  @at-root {
    .child1 {
      width: 100px;
    }
    .child2 {
      width: 200px;
    }
  }
}
.parent {
  @at-root {
    .child1 {
      width: 100px;
    }
    .child2 {
      width: 200px;
    }
  }
}
.parent {
  @at-root {
    .child1 {
      width: 100px;
    }
    .child2 {
      width: 200px;
    }
  }
}
.parent {
  @at-root {
    .child1 {
      width: 100px;
    }
    .child2 {
      width: 200px;
    }
  }
}
.parent {
  @at-root .child {
    width: 100px;
  }
}
.parent {
  @at-root .child {
    width: 100px;
  }
}
.parent {
  @at-root .child {
    width: 100px;
  }
}
.parent {
  @at-root .child {
    width: 100px;
  }
}
.parent {
  @at-root .child {
    width: 100px;
  }
}
.parent {
  @at-root .child {
    width: 100px;
  }
}
.parent {
  @at-root input[type="radio"] {
    color: red;
  }
}
@media print {
  .page {
    width: 8in;

    @at-root (with: media) {
      color: red;
    }
  }
}
@media print {
  .page {
    width: 8in;

    @at-root (with: media) {
      color: red;
    }
  }
}
@media print {
  .page {
    width: 8in;

    @at-root (with: media) {
      color: red;
    }
  }
}
@media print {
  .page {
    width: 8in;

    @at-root (with: media) {
      color: red;
    }
  }
}
@media print {
  .page {
    width: 8in;

    @at-root (with: media) {
      color: red;
    }
  }
}
@media print {
  .page {
    width: 8in;

    @at-root (with: media) {
      color: red;
    }
  }
}
@media print {
  .page {
    width: 8in;
    @at-root (with: media) {
      color: red;
    }
  }
}
@media print {
  .page {
    width: 8in;

    @at-root (with: media) {
      color: red;
    }
  }
}
@media print {
  .page {
    width: 8in;

    @at-root (without: media) {
      color: red;
    }
  }
}

`;

exports[`charset.css 1`] = `
@charset "UTF-8";
@charset "iso-8859-15";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@charset "UTF-8";
@charset "iso-8859-15";

`;

exports[`counter-style.css 1`] = `
@counter-style identifier {
    system: cyclic;
    symbols: "\\1F44D";
    suffix: " ";
}
@counter-style identifier {
system: cyclic;
symbols: "\\1F44D";
suffix: " ";
}
@counter-style identifier{
    system: cyclic;
    symbols: "\\1F44D";
    suffix: " ";
}
@counter-style  identifier  {
    system: cyclic;
    symbols: "\\1F44D";
    suffix: " ";
}
@counter-style
identifier
{
system
:
cyclic
;
symbols
:
"\\1F44D"
;
suffix
:
" "
;
}

@counter-style

identifier

{

system

:

cyclic

;

symbols


:

"\\1F44D"

;

suffix

:

" "

;

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@counter-style identifier {
  system: cyclic;
  symbols: "\\1F44D";
  suffix: " ";
}
@counter-style identifier {
  system: cyclic;
  symbols: "\\1F44D";
  suffix: " ";
}
@counter-style identifier {
  system: cyclic;
  symbols: "\\1F44D";
  suffix: " ";
}
@counter-style identifier {
  system: cyclic;
  symbols: "\\1F44D";
  suffix: " ";
}
@counter-style identifier {
  system: cyclic;
  symbols: "\\1F44D";
  suffix: " ";
}

@counter-style identifier {
  system: cyclic;

  symbols: "\\1F44D";

  suffix: " ";
}

`;

exports[`extend.css 1`] = `
.master {
    color:  black;
    font-size: 12px;
}
.emphasis {
    @extend .master;
    font-weight: bold;
}
.emphasis {
@extend .master;
font-weight: bold;
}
.emphasis {
    @extend  .master ;
    font-weight: bold;
}
.emphasis {
    @extend   .master  ;
    font-weight: bold;
}
.emphasis
{
@extend
.master
;
font-weight
:
bold
;
}
.emphasis

{

@extend

.master

;

font-weight

:

bold

;

}
%message-shared {
    border: 1px solid #ccc;
    padding: 10px;
    color: #333;
}
.message {
    @extend %message-shared;
}
.message {
@extend %message-shared;
}
.message {
    @extend  %message-shared ;
}
.message {
    @extend   %message-shared  ;
}
.message {
@extend
%message-shared;
}
.message {

@extend

%message-shared;

}
a.important {
    @extend .notice !optional;
}
a.important {
@extend .notice !optional;
}
a.important {
    @extend  .notice !optional ;
}
a.important {
    @extend  .notice  !optional  ;
}
a.important
{
@extend
.notice
!optional
;
}
a.important

{

@extend

.notice

!optional

;

}
.message-error {
    @extend .message, .important;
}
.message-error {
    @extend .message , .important ;
}
.message-error {
    @extend   .message  ,  .important  ;
}
.message-error {
    @extend .message,
        .important;
}
.message-error {
    @extend
        .message,
        .important;
}
.message-error
{
@extend
.message
,
.important
;
}
.message-error

{

@extend

.message

,

.important;

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
.master {
  color: black;
  font-size: 12px;
}
.emphasis {
  @extend .master;
  font-weight: bold;
}
.emphasis {
  @extend .master;
  font-weight: bold;
}
.emphasis {
  @extend .master;
  font-weight: bold;
}
.emphasis {
  @extend .master;
  font-weight: bold;
}
.emphasis {
  @extend .master;
  font-weight: bold;
}
.emphasis {
  @extend .master;

  font-weight: bold;
}
%message-shared {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}
.message {
  @extend %message-shared;
}
.message {
  @extend %message-shared;
}
.message {
  @extend %message-shared;
}
.message {
  @extend %message-shared;
}
.message {
  @extend %message-shared;
}
.message {
  @extend %message-shared;
}
a.important {
  @extend .notice !optional;
}
a.important {
  @extend .notice !optional;
}
a.important {
  @extend .notice !optional;
}
a.important {
  @extend .notice !optional;
}
a.important {
  @extend .notice !optional;
}
a.important {
  @extend .notice !optional;
}
.message-error {
  @extend .message,
    .important;
}
.message-error {
  @extend .message,
    .important;
}
.message-error {
  @extend .message,
    .important;
}
.message-error {
  @extend .message,
    .important;
}
.message-error {
  @extend .message,
    .important;
}
.message-error {
  @extend .message,
    .important;
}
.message-error {
  @extend .message,
    .important;
}

`;

exports[`font-face.css 1`] = `
@font-face {
    font-family: "Open Sans";
    src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
        url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
}
@font-face {
font-family: "Open Sans";
src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
}
@font-face{
    font-family: "Open Sans";
    src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
        url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
}
@font-face  {
    font-family: "Open Sans";
    src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
        url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
}
@font-face
{
font-family
:
"Open Sans"
;
src
:
url(
"/fonts/OpenSans-Regular-webfont.woff2"
)
format(
"woff2"
)
,
url(
"/fonts/OpenSans-Regular-webfont.woff"
)
format(
"woff"
)
;
}
@font-face

{

font-family

:

"Open Sans"

;

src

:

url(

"/fonts/OpenSans-Regular-webfont.woff2"

)

format(

"woff2"

)

,

url(

"/fonts/OpenSans-Regular-webfont.woff"

)

format(


"woff"

)

;

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@font-face {
  font-family: "Open Sans";
  src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
    url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
}
@font-face {
  font-family: "Open Sans";
  src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
    url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
}
@font-face {
  font-family: "Open Sans";
  src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
    url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
}
@font-face {
  font-family: "Open Sans";
  src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
    url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
}
@font-face {
  font-family: "Open Sans";
  src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
    url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
}
@font-face {
  font-family: "Open Sans";

  src: url("/fonts/OpenSans-Regular-webfont.woff2") format("woff2"),
    url("/fonts/OpenSans-Regular-webfont.woff") format("woff");
}

`;

exports[`font-feature-values.css 1`] = `
@font-feature-values Font One {
    @styleset {
        nice-style: 12;
    }
}
@font-feature-values Font One {
@styleset {
nice-style: 12;
}
}
@font-feature-values Font One{
    @styleset{
        nice-style: 12;
    }
}
@font-feature-values  Font One  {
    @styleset  {
        nice-style: 12;
    }
}
@font-feature-values
Font One
{
@styleset
{
nice-style
:
12
;
}
}

@font-feature-values

Font One

{

@styleset
{

nice-style

:

12

;

}

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@font-feature-values Font One {
  @styleset {
    nice-style: 12;
  }
}
@font-feature-values Font One {
  @styleset {
    nice-style: 12;
  }
}
@font-feature-values Font One {
  @styleset {
    nice-style: 12;
  }
}
@font-feature-values Font One {
  @styleset {
    nice-style: 12;
  }
}
@font-feature-values Font One {
  @styleset {
    nice-style: 12;
  }
}

@font-feature-values Font One {
  @styleset {
    nice-style: 12;
  }
}

`;

exports[`for.css 1`] = `
@for $i from 1 through 8 {}
@for $i from 1 through 8{}
@for  $i  from  1  through  8  {}
@for  $i
    from
    1
    through
    8
    {}
@for
    $i
    from
    1
    through
    8
    {}
@for
$i
from
1
through
8
{}
@for

$i

from

1

through

8

{}
@for $very-very-very-very-very-very-very-very-very-very-very-vety-very-very-very-long-var  from 1 through 8 {}
@for $very-very-very-very-very-very-very-very-very-very-very-vety-very-very-very-long-var  from 1000000000000000000000000000000000000 through 8000000000000000000000000000000000000 {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@for $i from 1 through 8 {
}
@for $i from 1 through 8 {
}
@for $i from 1 through 8 {
}
@for $i from 1 through 8 {
}
@for $i from 1 through 8 {
}
@for $i from 1 through 8 {
}
@for $i from 1 through 8 {
}
@for $very-very-very-very-very-very-very-very-very-very-very-vety-very-very-very-long-var
    from 1 through 8 {
}
@for $very-very-very-very-very-very-very-very-very-very-very-vety-very-very-very-long-var
    from 1000000000000000000000000000000000000 through
    8000000000000000000000000000000000000 {
}

`;

exports[`function.css 1`] = `
@function func($arg, $arg1, $arg2: 10, $args...) {
    @return "Func";
}
@function func($arg,$arg1,$arg2:10,$args...){
    @return "Func";
}
@function func ( $arg , $arg1 , $arg2 : 10 , $args ... ) {
    @return "Func";
}
@function  func  (  $arg  ,  $arg1  ,  $arg2  :  10  ,  $args  ...  )  {
    @return "Func";
}
@function func(
    $arg,
    $arg1,
    $arg2: 10,
    $args...
)  {
    @return "Func";
}
@function
    func(
        $arg,
        $arg1,
        $arg2: 10,
        $args...
    )  {
    @return "Func";
}
@function
func
(
$arg
,
$arg1
,
$arg2
:
10
,
$args
...
)
{
@return
"Func"
;
}
@function

func

(

$arg

,

$arg1

,

$arg2

:

10

,

$args

...

)

{

@return

"Func"

;

}
@function func($very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-arg, $very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-arg1, $very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-arg2: 10, $very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-args...) {
    @return "Func";
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@function func($arg, $arg1, $arg2: 10, $args...) {
  @return "Func";
}
@function func($arg, $arg1, $arg2:10, $args...) {
  @return "Func";
}
@function func ($arg, $arg1, $arg2: 10, $args ...) {
  @return "Func";
}
@function func ($arg, $arg1, $arg2: 10, $args ...) {
  @return "Func";
}
@function func($arg, $arg1, $arg2: 10, $args...) {
  @return "Func";
}
@function func($arg, $arg1, $arg2: 10, $args...) {
  @return "Func";
}
@function func ($arg, $arg1, $arg2: 10, $args ...) {
  @return "Func";
}
@function func ($arg, $arg1, $arg2: 10, $args ...) {
  @return "Func";
}
@function func(
    $very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-arg,
    $very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-arg1,
    $very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-arg2:
      10,
    $very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-args...
  ) {
  @return "Func";
}

`;

exports[`if-else.css 1`] = `
@if $media == phonePortrait {
    $k: .15625;
} @else if $media == phoneLandscape {
    $k: .08803;
} @else if $media == tabletPortrait {
    $k: .065106;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@if $media == phonePortrait {
  $k: 0.15625;
} @else if $media == phoneLandscape {
  $k: 0.08803;
} @else if $media == tabletPortrait {
  $k: 0.065106;
}

`;

exports[`include.css 1`] = `
@include mix(1px, 2px, $arg2: 10, 2px 4px 6px) {}
@include mix(1px,$2px,$arg2:10,2px 4px 6px){}
@include mix ( 1px , 2px , $arg2 : 10 , 2px 4px 6px ) {}
@include mix  (  1px  ,  2px  , $arg2  :  10  ,  2px  4px  6px  )  {}
@include mix(
    1px,
    2px,
    $arg2: 10,
    2px  4px  6px
)  {}
@include m
ix(
    1px,
    2px,
    $arg2: 10,
    2px  4px  6px
)  {}
@include
mix
(
1px
,
2px
,
$arg2
:
10
,
2px
4px
6px
)
{
}
@include

mix

(

1px

,

2px

,

$arg2

:

10

,

2px

4px

6px

)
{

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@include mix(1px, 2px, $arg2: 10, 2px 4px 6px) {
}
@include mix(1px, $2px, $arg2:10, 2px 4px 6px) {
}
@include mix (1px, 2px, $arg2: 10, 2px 4px 6px) {
}
@include mix (1px, 2px, $arg2: 10, 2px 4px 6px) {
}
@include mix(1px, 2px, $arg2: 10, 2px 4px 6px) {
}
@include m ix(1px, 2px, $arg2: 10, 2px 4px 6px) {
}
@include mix (1px, 2px, $arg2: 10, 2px 4px 6px) {
}
@include mix (1px, 2px, $arg2: 10, 2px 4px 6px) {
}

`;

exports[`keyframes.css 1`] = `
@keyframes identifier {
  0% {
    top: 0;
    left: 0;
  }
  30% {
    top: 50px;
  }
  68%,
  72% {
    left: 50px;
  }
  100% {
    top: 100px;
    left: 100%;
  }
}
@keyframes identifier {
0%{top:0;left:0;}
30%{top: 50px;}
68%,72%{left: 50px;}
100%{top: 100px; left: 100%;}
}
@keyframes identifier{
    0% {
        top:0;
        left:0;
    }
    30% {
        top: 50px;
    }
    68%, 72% {
        left: 50px;
    }
    100% {
        top: 100px;
        left: 100%;
    }
}
@keyframes  identifier  {
    0% {
        top:0;
        left:0;
    }
    30% {
        top: 50px;
    }
    68%, 72% {
        left: 50px;
    }
    100% {
        top: 100px;
        left: 100%;
    }
}
@keyframes
identifier
{
0%
{
top
:
0;
left
:
0
;
}
30%
{
top
:
50px
;
}
68%
,
72%
{
left
:
50px
;
}
100%
{
top
:
100px
;
left
:
100%
;
}
}
@keyframes

identifier

{

0%

{

top

:

0

;

left

:

0

;

}

30%

{

top

:

50px

;

}

68%

,

72%

{

left

:

50px

;

}

100%

{

top

:

100px

;

left

:

100%

;

}

}
@keyframes identifier {
  from {
    margin-top: 50px;
  }
  to {
    margin-top: 100px;
  }
}
@keyframes
identifier
{
from
{
margin-top: 50px;
}
to
{
margin-top: 100px;
}
}
@keyframes

identifier

{

from

{

margin-top: 50px;

}

to

{

margin-top: 100px;

}

}
@-webkit-keyframes identifier {
  0%   { opacity: 0; top: 4rem; }
  100% { opacity: 1; top: 0; }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@keyframes identifier {
  0% {
    top: 0;
    left: 0;
  }
  30% {
    top: 50px;
  }
  68%,
  72% {
    left: 50px;
  }
  100% {
    top: 100px;
    left: 100%;
  }
}
@keyframes identifier {
  0% {
    top: 0;
    left: 0;
  }
  30% {
    top: 50px;
  }
  68%,
  72% {
    left: 50px;
  }
  100% {
    top: 100px;
    left: 100%;
  }
}
@keyframes identifier {
  0% {
    top: 0;
    left: 0;
  }
  30% {
    top: 50px;
  }
  68%,
  72% {
    left: 50px;
  }
  100% {
    top: 100px;
    left: 100%;
  }
}
@keyframes identifier {
  0% {
    top: 0;
    left: 0;
  }
  30% {
    top: 50px;
  }
  68%,
  72% {
    left: 50px;
  }
  100% {
    top: 100px;
    left: 100%;
  }
}
@keyframes identifier {
  0% {
    top: 0;
    left: 0;
  }
  30% {
    top: 50px;
  }
  68%,
  72% {
    left: 50px;
  }
  100% {
    top: 100px;
    left: 100%;
  }
}
@keyframes identifier {
  0% {
    top: 0;

    left: 0;
  }

  30% {
    top: 50px;
  }

  68%,
  72% {
    left: 50px;
  }

  100% {
    top: 100px;

    left: 100%;
  }
}
@keyframes identifier {
  from {
    margin-top: 50px;
  }
  to {
    margin-top: 100px;
  }
}
@keyframes identifier {
  from {
    margin-top: 50px;
  }
  to {
    margin-top: 100px;
  }
}
@keyframes identifier {
  from {
    margin-top: 50px;
  }

  to {
    margin-top: 100px;
  }
}
@-webkit-keyframes identifier {
  0% {
    opacity: 0;
    top: 4rem;
  }
  100% {
    opacity: 1;
    top: 0;
  }
}

`;

exports[`mixin.css 1`] = `
@mixin mix($arg, $arg1, $arg2: 10, $args...) {}
@mixin mix($arg,$arg1,$arg2:10,$args...){}
@mixin mix ( $arg , $arg1 , $arg2 : 10 , $args ... ) {}
@mixin  mix  (  $arg  ,  $arg1  ,  $arg2  :  10  ,  $args  ...  )  {}
@mixin mix(
    $arg,
    $arg1,
    $arg2: 10,
    $args...
) {}
@mixin
mix(
    $arg,
    $arg1,
    $arg2: 10,
    $args...
    ) {}
@mixin
mix
(
$arg
,
$arg1
,
$arg2
:
10
,
$args
...
)
{
}
@mixin

mix

(

$arg

,

$arg1

,

$arg2

:

10

,

$args

...

)

{
}
@mixin mix($very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-arg, $very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-arg1, $very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-arg2: 10, $very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-args...) {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@mixin mix($arg, $arg1, $arg2: 10, $args...) {
}
@mixin mix($arg, $arg1, $arg2:10, $args...) {
}
@mixin mix ($arg, $arg1, $arg2: 10, $args ...) {
}
@mixin mix ($arg, $arg1, $arg2: 10, $args ...) {
}
@mixin mix($arg, $arg1, $arg2: 10, $args...) {
}
@mixin mix($arg, $arg1, $arg2: 10, $args...) {
}
@mixin mix ($arg, $arg1, $arg2: 10, $args ...) {
}
@mixin mix ($arg, $arg1, $arg2: 10, $args ...) {
}
@mixin mix(
    $very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-arg,
    $very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-arg1,
    $very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-arg2:
      10,
    $very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-args...
  ) {
}

`;

exports[`namespaces.css 1`] = `
@namespace toto "http://toto.example.org";
@namespace toto url("http://toto.example.org");
@namespace toto "http://toto.example.org" ;
@namespace  toto  "http://toto.example.org"  ;
@namespace
toto
"http://toto.example.org"
;
@namespace

toto

"http://toto.example.org"

;
@namespace very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-namespace "http://toto.example.org";
@namespace
very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-namespace
"http://toto.example.org"
;
@namespace

very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-namespace

"http://toto.example.org"

;
@namespace "http://example.com/foo";
@namespace url("http://example.com/foo");
@namespace url("http://example.com/foo") ;
@namespace  url("http://example.com/foo")  ;
@namespace
url("http://example.com/foo");
@namespace

url("http://example.com/foo");
@namespace url("http://example.com/foo/very/very/very/very/very/very/very/very/very/very/very/very/very/very");
@namespace
url("http://example.com/foo/very/very/very/very/very/very/very/very/very/very/very/very/very/very/very");
@namespace

url("http://example.com/foo/very/very/very/very/very/very/very/very/very/very/very/very/very/very/very");
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@namespace toto "http://toto.example.org";
@namespace toto url("http://toto.example.org");
@namespace toto "http://toto.example.org";
@namespace toto "http://toto.example.org";
@namespace toto "http://toto.example.org";
@namespace toto "http://toto.example.org";
@namespace very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-namespace "http://toto.example.org";
@namespace very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-namespace "http://toto.example.org";
@namespace very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-namespace "http://toto.example.org";
@namespace "http://example.com/foo";
@namespace url("http://example.com/foo");
@namespace url("http://example.com/foo");
@namespace url("http://example.com/foo");
@namespace url("http://example.com/foo");
@namespace url("http://example.com/foo");
@namespace url("http://example.com/foo/very/very/very/very/very/very/very/very/very/very/very/very/very/very");
@namespace url("http://example.com/foo/very/very/very/very/very/very/very/very/very/very/very/very/very/very/very");
@namespace url("http://example.com/foo/very/very/very/very/very/very/very/very/very/very/very/very/very/very/very");

`;

exports[`page.css 1`] = `
@page {
    margin: 1cm;
}
@page {
margin: 1cm;
}
@page{
margin: 1cm;
}
@page  {
    margin: 1cm;
}
@page
{
margin
:
1cm
;
}
@page

{

margin
:

1cm

;

}
@page :first {
    margin: 2cm;
}
@page :first {
margin: 2cm;
}
@page :first{
    margin: 2cm;
}
@page  :first  {
    margin: 2cm;
}
@page
:first
{
margin
:
2cm
;
}
@page

:first

{

margin

:

2cm

;

}
@page vertical {
    size: A4 portrait;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@page {
  margin: 1cm;
}
@page {
  margin: 1cm;
}
@page {
  margin: 1cm;
}
@page {
  margin: 1cm;
}
@page {
  margin: 1cm;
}
@page {
  margin: 1cm;
}
@page :first {
  margin: 2cm;
}
@page :first {
  margin: 2cm;
}
@page :first {
  margin: 2cm;
}
@page :first {
  margin: 2cm;
}
@page :first {
  margin: 2cm;
}
@page :first {
  margin: 2cm;
}
@page vertical {
  size: A4 portrait;
}

`;

exports[`return.css 1`] = `
@function grid-width($n) {
    @return $n * $grid-width + ($n - 1) * $gutter-width;
}
@function grid-width($n) {
@return $n * $grid-width + ($n - 1) * $gutter-width;
}
@function grid-width($n) {
@return $n*$grid-width+($n-1)*$gutter-width;
}
@function grid-width($n) {
    @return $n * $grid-width + ( $n - 1 ) * $gutter-width ;
}
@function grid-width($n) {
    @return  $n   *  $grid-width  +  (  $n  -  1  )  *  $gutter-width  ;
}
@function grid-width($n) {
    @return $n
        *
        $grid-width
        + (
            $n
            -
            1
        )
        *
        $gutter-width;
}
@function grid-width($n) {
    @return
        $n
        *
        $grid-width
        + (
            $n
            -
            1
        )
        *
        $gutter-width;
}
@function
grid-width(
$n
)
{
@return
$n
*
$grid-width
+
(
$n
-
1
)
*
$gutter-width
;
}
@function

grid-width(

$n

)

{

@return

$n

*

$grid-width

+

(

$n

-

1

)

*

$gutter-width

;

}
@function grid-width($n) {
    @return $very-very-very-very-very-very-vey-long-var * $very-very-very-very-very-very-vey-long-var + ($very-very-very-very-very-very-vey-long-var - 1) * $very-very-very-very-very-very-vey-long-var;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@function grid-width($n) {
  @return $n * $grid-width + ($n - 1) * $gutter-width;
}
@function grid-width($n) {
  @return $n * $grid-width + ($n - 1) * $gutter-width;
}
@function grid-width($n) {
  @return $n*$grid-width+($n-1)*$gutter-width;
}
@function grid-width($n) {
  @return $n * $grid-width + ($n - 1) * $gutter-width;
}
@function grid-width($n) {
  @return $n * $grid-width + ($n - 1) * $gutter-width;
}
@function grid-width($n) {
  @return $n * $grid-width + ($n - 1) * $gutter-width;
}
@function grid-width($n) {
  @return $n * $grid-width + ($n - 1) * $gutter-width;
}
@function grid-width($n) {
  @return $n * $grid-width + ($n - 1) * $gutter-width;
}
@function grid-width($n) {
  @return $n * $grid-width + ($n - 1) * $gutter-width;
}
@function grid-width($n) {
  @return $very-very-very-very-very-very-vey-long-var *
      $very-very-very-very-very-very-vey-long-var +
      (
        $very-very-very-very-very-very-vey-long-var - 1
      ) * $very-very-very-very-very-very-vey-long-var;
}

`;

exports[`supports.css 1`] = `
@supports (transform-origin: 5% 5%) {}
@supports (transform-origin:5% 5%) {}
@supports ( transform-origin : 5% 5% ) {}
@supports (  transform-origin  :  5%  5%  ) {}
@supports
    (transform-origin: 5% 5%) {}
@supports
(transform-origin: 5% 5%) {}
@supports
(
transform-origin
:
5%
5%
) {}
@supports

(

transform-origin

:

5%

5%

)

{}
@supports (very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop: very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value) {}
@supports
  (very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop: very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value) {}
@supports
(
very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop
:
very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value
) {}
@supports

(

very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop

:

very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value

)

{}
@supports not(transform-origin: 10em 10em 10em) {}
@supports not (transform-origin: 10em 10em 10em) {}
@supports  not  ( transform-origin : 10em 10em 10em ) {}
@supports   not   (  transform-origin  :  10em  10em  10em  ) {}
@supports not
  (transform-origin: 10em 10em 10em) {}
@supports
    not (transform-origin: 10em 10em 10em) {}
@supports
  not
  (transform-origin: 10em 10em 10em) {}
@supports
not
(
transform-origin
:
10em
10em
10em
) {}
@supports

not

(

transform-origin

:

10em

10em

10em

)

{}
@supports not (very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop: very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value) {}
@supports
  not (very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop: very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value) {}
@supports not
  (very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop: very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value) {}
@supports
not
(
very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop
:
very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value
) {}
@supports

not

(

very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop

:

very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value

)

{}
@supports not (not (transform-origin: 2px)) {}
@supports not(not(transform-origin:2px)) {}
@supports not ( not ( transform-origin : 2px ) ) {}
@supports  not  (  not  (  transform-origin  :  2px  )  ) {}
@supports not
  (not (transform-origin: 2px)) {}
@supports not
  (
    not (transform-origin: 2px)
  ) {}
@supports
not
(
not
(
transform-origin
:
2px
)
) {}
@supports

not

(

not

(

transform-origin

:

2px

)

)

{}
@supports (display: flexbox) and (not (display: inline-grid)) {}
@supports (display: table-cell) and (display: list-item) {}
@supports ( display : table-cell ) and ( display : list-item ) {}
@supports  (  display  :  table-cell  )  and  (  display  :  list-item  ) {}
@supports
  (display: table-cell) and (display: list-item) {}
@supports (display: table-cell) and
  (display: list-item) {}
@supports (display: table-cell)
  and (display: list-item) {}
@supports
(
display
:
table-cell
)
and
(
display
:
list-item
) {}
@supports

(

display

:

table-cell

)

and

(

display

:

list-item

)

{}
@supports (display: table-cell) and (display: list-item) and (display: run-in) {}
@supports (display: table-cell) and ((display: list-item) and (display: run-in)) {}
@supports
  (display: table-cell) and ((display: list-item) and (display: run-in)) {}
@supports (display: table-cell)
  and ((display: list-item)
  and (display: run-in)) {}
@supports (display: table-cell) and
  ((display: list-item) and
  (display: run-in)) {}
@supports
(
display
:
table-cell
)
and
(
(
display
:
list-item
)
and
(
display
:
run-in
)
) {}
@supports

(

display

:

table-cell

)

and

(

(

display

:

list-item

)

and

(

display

:

run-in

)

)

{}
@supports (transform-style: preserve) or (-moz-transform-style: preserve) {}
@supports (transform-style: preserve) or (-moz-transform-style: preserve) or (-o-transform-style: preserve) or (-webkit-transform-style: preserve) {}
@supports (transform-style: preserve-3d) or ((-moz-transform-style: preserve-3d) or ((-o-transform-style: preserve-3d) or (-webkit-transform-style: preserve-3d))) {}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@supports (transform-origin: 5% 5%) {
}
@supports (transform-origin: 5% 5%) {
}
@supports (transform-origin: 5% 5%) {
}
@supports (transform-origin: 5%  5%) {
}
@supports (transform-origin: 5% 5%) {
}
@supports (transform-origin: 5% 5%) {
}
@supports (transform-origin: 5%
5%) {
}
@supports (transform-origin: 5%

5%) {
}
@supports (very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop: very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value) {
}
@supports (very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop: very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value) {
}
@supports (very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop: very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value) {
}
@supports (very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop: very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value) {
}
@supports not(transform-origin: 10em 10em 10em) {
}
@supports not (transform-origin: 10em 10em 10em) {
}
@supports not (transform-origin: 10em 10em 10em) {
}
@supports not (transform-origin: 10em  10em  10em) {
}
@supports not (transform-origin: 10em 10em 10em) {
}
@supports not (transform-origin: 10em 10em 10em) {
}
@supports not (transform-origin: 10em 10em 10em) {
}
@supports not (transform-origin: 10em
10em
10em) {
}
@supports not (transform-origin: 10em

10em

10em) {
}
@supports not (very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop: very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value) {
}
@supports not (very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop: very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value) {
}
@supports not (very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop: very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value) {
}
@supports not (very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop: very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value) {
}
@supports not (very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-prop: very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-very-long-value) {
}
@supports not (not (transform-origin: 2px)) {
}
@supports not(not(transform-origin:2px)) {
}
@supports not (not ( transform-origin: 2px )) {
}
@supports not (not ( transform-origin: 2px  )) {
}
@supports not (not (transform-origin: 2px)) {
}
@supports not (not (transform-origin: 2px)) {
}
@supports not (not
(
transform-origin: 2px
)) {
}
@supports not (not

(

transform-origin: 2px

)) {
}
@supports (display: flexbox) and (not (display: inline-grid)) {
}
@supports (display: table-cell) and (display: list-item) {
}
@supports (display: table-cell) and (display: list-item) {
}
@supports (display: table-cell) and (display: list-item) {
}
@supports (display: table-cell) and (display: list-item) {
}
@supports (display: table-cell) and (display: list-item) {
}
@supports (display: table-cell) and (display: list-item) {
}
@supports (display: table-cell) and (display: list-item) {
}
@supports (display: table-cell) and (display: list-item) {
}
@supports (display: table-cell) and (display: list-item) and (display: run-in) {
}
@supports (display: table-cell) and ((display: list-item) and (display: run-in)) {
}
@supports (display: table-cell) and ((display: list-item) and (display: run-in)) {
}
@supports (display: table-cell) and ((display: list-item)
  and (display: run-in)) {
}
@supports (display: table-cell) and ((display: list-item) and
  (display: run-in)) {
}
@supports (display: table-cell) and ((
display: list-item
)
and
(
display
:
run-in
)) {
}
@supports (display: table-cell) and ((

display: list-item

)

and

(

display

:

run-in

)) {
}
@supports (transform-style: preserve) or (-moz-transform-style: preserve) {
}
@supports (transform-style: preserve) or (-moz-transform-style: preserve) or (-o-transform-style: preserve) or (-webkit-transform-style: preserve) {
}
@supports (transform-style: preserve-3d) or ((-moz-transform-style: preserve-3d) or ((-o-transform-style: preserve-3d) or (-webkit-transform-style: preserve-3d))) {
}

`;

exports[`viewport.css 1`] = `
@viewport {
  min-width: 640px;
  max-width: 800px;
}

@viewport {
min-width: 640px;
max-width: 800px;
}

@viewport{
  min-width: 640px;
  max-width: 800px;
}

@viewport  {
  min-width: 640px;
  max-width: 800px;
}

@viewport
{
min-width
:
640px
;
max-width
:
800px
;
}

@viewport

{

min-width

:

640px

;

max-width

:

800px

;

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@viewport {
  min-width: 640px;
  max-width: 800px;
}

@viewport {
  min-width: 640px;
  max-width: 800px;
}

@viewport {
  min-width: 640px;
  max-width: 800px;
}

@viewport {
  min-width: 640px;
  max-width: 800px;
}

@viewport {
  min-width: 640px;
  max-width: 800px;
}

@viewport {
  min-width: 640px;

  max-width: 800px;
}

`;

exports[`while.css 1`] = `
@while $i > 0 {}
@while $i>0{}
@while  $i  >  0  {}
@while $i
    >
    0
    {}
@while
    $i
    >
    0
    {}
@while
$i
>
0
{
}
@while

$i

>

0

{

}
@while ($i > 0) {}
@while ($i>0){}
@while ( $i > 0 ) {}
@while  (  $i  >  0  )  {}
@while (
    $i > 0
) {}
@while
    ($i > 0) {}
@while
(
$i
>
0
)
{
}
@while

(

$i

>

0

)

{

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@while $i > 0 {
}
@while $i>0 {
}
@while $i > 0 {
}
@while $i > 0 {
}
@while $i > 0 {
}
@while $i > 0 {
}
@while $i > 0 {
}
@while ($i > 0) {
}
@while ($i>0) {
}
@while ($i > 0) {
}
@while ($i > 0) {
}
@while ($i > 0) {
}
@while ($i > 0) {
}
@while ($i > 0) {
}
@while ($i > 0) {
}

`;
